# SmolTrainer

./: .env.example  .flake8  .gitignore  .gitmodules  README.md  checkpoint_uploader.py  inference.py  pyproject.toml
baby_moe/: inference.py  moe.py  runner.py  train.py  utils.py
baby_moe/config/: __init__.py  train.py
baby_moe/data/concoction/: prepare.py
baby_moe/model/: __init__.py  llama.py  lora.py  moe.py
baby_moe/trainer/: __init__.py  base.py  checkpointer.py  data_loader.py  initializer.py
scripts/: converter.py  data_maker.py  inference.py  run_benchmark.sh  run_train.sh
smol_trainer/: inference.py  runner.py  utils.py
smol_trainer/config/: __init__.py  model.py  train.py
smol_trainer/data/: data_config.py  data_maker.py
smol_trainer/data/concoction/: prepare.py
smol_trainer/data/data_configurations/: test.yaml
smol_trainer/model/: __init__.py  gpt.py  llama.py  lora.py  moe.py  utils.py
smol_trainer/trainer/: __init__.py  base.py  checkpointer.py  data_loader.py  initializer.py
