[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Baby-MoE"
version = "0.1.0"
description = "Make your very own BabyMoE."
authors = ["Owen Colegrove <owen@emergentagi.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "2.0.0"
numpy = "^1.25.2"
requests = "^2.31.0"
tiktoken = "^0.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
isort = "5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.5.1"
sourcery = "^1.6.0"
tensorboard = "^2.14.0"
types-requests = "^2.31.0.2"
types-attrs = "^19.1.0"
yapf = "0.40.1"

[tool.black]
line-length = 79
exclude = '''
(
  /(
    | baby_moe/nano_gpt/
  )/
)
'''

[tool.mypy]
ignore_missing_imports = true
exclude = 'baby_moe/nano_gpt/|baby_moe/inference.py'

[tool.flake8]
ignore = ["E501", "W503"]
exclude = 'baby_moe/nano_gpt/'