[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smol-trainer"
version = "0.1.0"
description = "A smol interface for training, built on top of nanoGPT."
authors = ["Owen Colegrove <owen@emergentagi.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "2.1.0"
numpy = "^1.25.2"
requests = "^2.31.0"
tiktoken = "^0.4.0"
wandb = "^0.15.9"
python-dotenv = "^1.0.0"
datasets = "^2.14.5"

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
isort = "5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.5.1"
sourcery = "^1.6.0"
types-requests = "^2.31.0.2"
types-attrs = "^19.1.0"
yapf = "0.40.1"

[tool.black]
line-length = 79
exclude = '''
(
  /(
    | smol_trainer/nano_gpt/
  )/
)
'''

[tool.mypy]
ignore_missing_imports = true
exclude = 'smol_trainer/nano_gpt/|smol_trainer/inference.py'

[tool.flake8]
ignore = ["E501", "W503"]
exclude = 'smol_trainer/nano_gpt/'