[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smol-trainer"
version = "0.1.0"
description = "A smol interface for training, built on top of nanoGPT."
authors = ["Owen Colegrove <owen@emergentagi.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "2.1.0"
numpy = "^1.25.2"
requests = "^2.31.0"
wandb = "^0.15.9"
python-dotenv = "^1.0.0"
datasets = "^2.14.5"
transformers = "^4.34.0"
triton = "^2.1.0"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "6.1.0"
isort = "5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.5.1"
sourcery = "^1.6.0"
types-requests = "^2.31.0.2"
types-attrs = "^19.1.0"
yapf = "0.40.1"

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true
exclude = 'smol_trainer/inference.py|playground/'

[tool.flake8]
ignore = ["E501", "W503"]
exclude = 'smol_trainer/nano_gpt/'
